--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "ejs": "^3.1.10",
+        "express-rate-limit": "^7.5.0",
         "express-validator": "^7.0.1",
         "multer": "^1.4.5-lts.1",
         "nodemailer": "^6.10.1",
