--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
         "cookie-parser": "^1.4.6",
         "datatables.net-bs4": "1.10.24",
         "express": "^4.19.2",
+        "jest": "^29.7.0",
+        "jest-environment-node": "^29.7.0",
         "jquery": "3.6.0",
         "jquery.easing": "^1.4.1",
         "jsonwebtoken": "^9.0.2",
@@ -45,6 +47,7 @@
         "nodemailer": "^6.10.1",
         "passport": "^0.7.0",
         "passport-local": "^1.0.0",
-        "Prisma": "npm:prisma@^5.13.0"
+        "Prisma": "npm:prisma@^5.13.0",
+        "supertest": "^7.1.1"
     }
 }
